fix winner effect not showing up
in chip hover style, the box-shodow was set to none. which caused the
box-shadow to not appear on player selected chip. removing that style
solved the issue

--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,6 @@ h3 {
   justify-content: center;
 }
 
-.chip:hover {
-  box-shadow: unset;
-}
-
 .chip:active {
   border-width: 16px;
   box-shadow: 5px 5px 10px hsla(0, 0%, 0%, 0.1) inset;
